--- a/src/styles.css
+++ b/src/styles.css
@@ -68,7 +68,6 @@ fieldset {
 .control input {
   display: block;
   width: 100%;
-  max-width: 15rem;
   padding: 0.5rem;
   font-size: 1rem;
   border-radius: 4px;
@@ -80,7 +79,6 @@ fieldset {
 .control select {
   display: block;
   width: 100%;
-  max-width: 15rem;
   padding: 0.5rem;
   font-size: 1rem;
   border-radius: 4px;
@@ -132,10 +130,6 @@ fieldset {
   gap: 0.5rem;
 }
 
-.control-row .control {
-  flex: 1;
-}
-
 hr {
   margin: 1.5rem 0;
   border: 1px solid #147b73;
@@ -171,4 +165,12 @@ hr {
 .button-flat:focus {
   background-color: transparent;
   color: #869999;
+}
+
+.control:has(.ng-invalid.ng-touched.ng-dirty) label{
+  color: #f98b75;
+}
+input.ng-invalid.ng-touched.ng-dirty {
+  background-color: #fbdcd6;
+  border-color: #f84e2c;
 }
