--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,8 @@
   <img src="logo.jpg" alt="A form and a pencil" />
   <h1>Angular Forms</h1>
 </header>
-
-<app-login />
+@if(!isSignUpSuccess()){
+  <app-signup (isSignupSuccess)="signUpForm($event)"/>
+}@else if(isSignUpSuccess()){
+  <app-login />
+}
