--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,20 +1,27 @@
-<form>
+<form [formGroup]="signUpReactiveForm" (ngSubmit)="signUpSubmit()">
   <h2>Welcome on board!</h2>
   <p>We just need a little bit of data from you to get you started 🚀</p>
 
   <div class="control">
     <label for="email">Email</label>
-    <input id="email" type="email" name="email" />
+    <input id="email" type="email" name="email" formControlName="email"/>
+    @if(emailIsInvalid){
+    <p class="control-error"> Invalid Email address entered</p>
+    }
   </div>
 
-  <div class="control-row">
+  <div class="control-row" formGroupName="passwords">
     <div class="control">
       <label for="password">Password</label>
       <input
         id="password"
         type="password"
         name="password"
+        formControlName="password"
       />
+      @if(passwordIsInvalid){
+        <p class="control-error"> Please enter a valid password (must be at least 6 characters long and contain a question mark)</p>
+      }
     </div>
 
     <div class="control">
@@ -23,20 +30,25 @@
         id="confirm-password"
         type="password"
         name="confirm-password"
+        formControlName="confirmpassword"
       />
+      @if(confirmpasswordIsInvalid){
+        <p class="control-error"> Please enter a valid password (must be at least 6 characters long and contain a question mark)</p>
+      }
     </div>
   </div>
 
   <hr />
 
   <div>
-    <div class="control-row">
+    <div class="control-row" formGroupName="names">
       <div class="control">
         <label for="first-name">First Name</label>
         <input
           type="text"
           id="first-name"
           name="first-name"
+          formControlName="firstName"
         />
       </div>
 
@@ -46,34 +58,35 @@
           type="text"
           id="last-name"
           name="last-name"
+          formControlName="lastName"
         />
       </div>
     </div>
 
-    <fieldset>
+    <fieldset formGroupName="address">
       <legend>Your Address</legend>
 
       <div class="control-row">
         <div class="control">
           <label for="street">Street</label>
-          <input type="text" id="street" name="street" />
+          <input type="text" id="street" name="street" formControlName="street"/>
         </div>
 
         <div class="control">
           <label for="number">Number</label>
-          <input type="text" id="number" name="number" />
+          <input type="text" id="number" name="number" formControlName="number"/>
         </div>
       </div>
 
       <div class="control-row">
         <div class="control">
           <label for="postal-code">Postal Code</label>
-          <input type="text" id="postal-code" name="postal-code" />
+          <input type="text" id="postal-code" name="postal-code" formControlName="postalCode"/>
         </div>
 
         <div class="control">
           <label for="city">City</label>
-          <input type="text" id="city" name="city" />
+          <input type="text" id="city" name="city" formControlName="city"/>
         </div>
       </div>
     </fieldset>
@@ -84,47 +97,27 @@
   <div class="control-row">
     <div class="control">
       <label for="role">What best describes your role?</label>
-      <select id="role" name="role">
+      <select id="role" name="role" formControlName="role">
         <option value="student">Student</option>
         <option value="teacher">Teacher</option>
         <option value="employee">Employee</option>
         <option value="founder">Founder</option>
         <option value="other">Other</option>
       </select>
+      @if(roleIsInvalid){
+        <p class="control-error"> Please enter a valid password (must be at least 6 characters long and contain a question mark)</p>
+      }
     </div>
   </div>
 
-  <fieldset>
+  <fieldset formArrayName="source">
     <legend>How did you find us?</legend>
-    <div class="control">
-      <input
-        type="checkbox"
-        id="google"
-        name="acquisition"
-        value="google"
-      />
-      <label for="google">Google</label>
-    </div>
-
-    <div class="control">
-      <input
-        type="checkbox"
-        id="friend"
-        name="acquisition"
-        value="friend"
-      />
-      <label for="friend">Referred by friend</label>
-    </div>
-
-    <div class="control">
-      <input
-        type="checkbox"
-        id="other"
-        name="acquisition"
-        value="other"
-      />
-      <label for="other">Other</label>
-    </div>
+    @for(source of sources; track source.id; let i = $index){
+      <div class="control">
+        <input type="checkbox" [id]="source.id" name="acquisition" value="source.value" [formControlName]="i" />
+        <label [for]="source.id">{{source.label}}</label>
+      </div>
+    }
   </fieldset>
 
   <div class="control-row">
@@ -134,6 +127,7 @@
           type="checkbox"
           id="terms-and-conditions"
           name="terms"
+          formControlName="agree"
         />
         I agree to the terms and conditions
       </label>
@@ -141,7 +135,14 @@
   </div>
 
   <p class="form-actions">
-    <button type="reset" class="button button-flat">Reset</button>
+    <button type="button" class="button button-flat" (click)="resetForm()">Reset</button>
     <button type="submit" class="button">Sign up</button>
   </p>
+  @if(signUpReactiveForm.invalid && signUpReactiveForm.touched && signUpReactiveForm.dirty){
+    <p class="control-error">
+      Invalid form - please check your input data
+    </p>
+  }@else if(signUpReactiveForm.valid){
+    {{signUpReactiveForm.value | json}}
+  }
 </form>
